--- a/Sales_prediction/Readme
+++ b/Sales_prediction/Readme
@@ -1,1 +1,4 @@
-
+SALES PREDICTION USING PYTHON
+Sales prediction involves forecasting the amount of a product that customers will purchase, taking into account various factors such as advertising expenditure, target audience segmentation, and  advertising platform selection.
+The dataset taken here is advertising.csv file
+By using linear regression technique model is predicted.
